--- a/style.css
+++ b/style.css
@@ -18,9 +18,10 @@
 .wrapper {
   display: flex;
   background: lightgray;
-  width: 100%;
+  width: 80%;
   height: 1000px;
-  align-items: center;
+  justify-content: center;
+  margin-left: 10%;
 }
 
 .innerWrapper {
