--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  height: 150px;
+  height: 200px;
+  margin-bottom: 20px;
 }
 
 #footer {
@@ -24,11 +25,13 @@
   margin-left: 10%;
 }
 
-.innerWrapper {
-  display: flex;
-  background: lightblue;
-  width: 50%;
-  height: 500px;
+.grid-container {
+  display: inline-block;
+  min-width: 75%;
 }
 
-
+form {
+  position: relative;
+  text-align: center;
+  justify-content: center;
+}
