--- a/style.css
+++ b/style.css
@@ -108,6 +108,9 @@ form {
   justify-content: center;
 }
 
+.weatherPadding {
+  margin: 5px;
+}
 .center {
   text-align: center;
   font-size: large;
