more style added with error box and click to refresh function on javaScript

--- a/style.css
+++ b/style.css
@@ -124,3 +124,21 @@ form {
   display: flex;
   justify-content: space-around;
 }
+
+#errorBox {
+  width: 100%;
+  height: 20%;
+  text-align: center;
+  background: purple;
+  padding: 5%;
+  color: yellow;
+  font-size: 25px;
+}
+#errorBox:hover {
+  border: 4px dotted yellow;
+  opacity: 0.5;
+}
+
+.hidden {
+  display: none;
+}
