--- a/style.css
+++ b/style.css
@@ -1,126 +1,168 @@
 #header {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  height: 200px;
-  margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 200px;
+    margin-bottom: 20px;
 }
 
 #footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  font-size: 20px;
-  background: rgb(70, 71, 61);
-  text-align: center;
-  color: white;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    font-size: 20px;
+    background: rgb(70, 71, 61);
+    text-align: center;
+    color: white;
 }
 
 .wrapper {
-  display: flex;
-  background: lightgray;
-  width: 80%;
-  height: 1000px;
-  justify-content: center;
-  margin-left: 10%;
+    display: flex;
+    background: lightgray;
+    width: 80%;
+    height: 1000px;
+    justify-content: center;
+    margin-left: 10%;
 }
 
 .grid-container {
-  display: inline-block;
-  min-width: 75%;
+    display: inline-block;
+    min-width: 75%;
 }
 
 form {
-  position: relative;
-  text-align: center;
-  justify-content: center;
+    position: relative;
+    text-align: center;
+    justify-content: center;
 }
 
 .innerWrapper {
-  margin: 5%, 30%, 5%, 30%;
-  text-align: left;
+    margin: 5%, 30%, 5%, 30%;
+    text-align: left;
 }
 
 .button {
-  background-color: salmon;
+    background-color: salmon;
 }
+
 .button:hover {
-  background-color: salmon;
-  opacity: 70%;
-  transition: ease-in;
+    background-color: salmon;
+    opacity: 70%;
+    transition: ease-in;
 }
 
 .button:focus {
-  background-color: salmon;
-  border-color: none;
-  outline: none;
+    background-color: salmon;
+    border-color: none;
+    outline: none;
 }
+
 
 /* The Modal (background) */
+
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
 }
+
 
 /* Modal Content/Box */
+
 .modal-content {
-  background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+    background-color: #fefefe;
+    margin: 15% auto;
+    /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    /* Could be more or less, depending on screen size */
 }
 
+
 /* The Close Button */
+
 .close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
 }
 
 .close:hover,
 .close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 #myBtn {
-  display: flex;
-  padding: 2%;
-  background: salmon;
-  color: white;
-  margin: auto;
+    display: flex;
+    padding: 2%;
+    background: salmon;
+    color: white;
+    margin: auto;
 }
 
 .weatherDiv {
-  margin-top: 1%;
-  display: flex;
-  justify-content: center;
+    margin-top: 1%;
+    display: flex;
+    justify-content: center;
 }
 
 .weatherPadding {
-  margin: 1%;
+    margin: 1%;
 }
+
 .center {
-  text-align: center;
-  font-size: x-large;
+    text-align: center;
+    font-size: x-large;
 }
 
 .hide {
-  display: none;
+    display: none;
+}
+
+.list-container {
+    position: relative;
+    text-align: center;
+    justify-content: center;
 }
 
 .list-wrapper {
-  display: flex;
-  justify-content: space-around;
+    list-style-type: none;
+    justify-content: space-around;
+}
+
+.list-wrapper li {
+    width: 100%;
+}
+
+.list-wrapper p {
+    float: left;
+}
+
+.list-wrapper input {
+    float: left;
+}
+
+.backpack-list input.qtd-item {
+    background: white;
+    border: none;
+    cursor: auto;
 }
