centering modal wrapper box

--- a/style.css
+++ b/style.css
@@ -192,6 +192,7 @@ form {
 }
 
 .backpack-list {
+  margin-left: 5%;
   list-style-type: none;
   border: 1px solid black;
   padding: 10px;
@@ -207,7 +208,6 @@ form {
 }
 
 .backpack-list li p {
-  width: 100px;
   padding: 10px 0;
   margin: 10px;
   display: inline;
