i liked, fixed footer again

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ main {
   bottom: 0;
   width: 100%;
   font-size: 20px;
+  margin-top: 5%;
   background: rgb(70, 71, 61);
   text-align: center;
   color: white;
